# Django_work

./: .env.sample  groups.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_alter_product_created_at_alter_product_updated_at.py  0005_rename_title_category_name_rename_title_product_name.py  0006_blog.py  0007_alter_blog_is_published.py  0008_version.py  0009_product_owner.py  0010_product_is_published.py  0011_alter_product_options.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  category_list.html  contacts.html  product.html  product_detail.html  product_list.html  products.html
catalog/templates/catalog/includes/: inc_main_menu.html  inc_under_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
fixtures/: catalog_data.json
media/catalog/: granat.jfif  moroz.jfif  pirog.jfif
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_token.py
users/templates/users/: login.html  reset.html
