[tool.poetry]
name = "django-work"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pillow = "^10.3.0"
ipython = "^8.23.0"
psycopg2 = "^2.9.9"
pytils = "^0.4.1"
redis = "^5.0.4"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
